--- a/sketch.css
+++ b/sketch.css
@@ -1,17 +1,37 @@
-.parent{
-    background-color: white;
-    width: 573px;
-    height: 578px;
-    left: 31%;
-    top: 11%;
-    border: 5px solid;
-    position: fixed;
-        
-    
+.parent {
+    /* display:inline-grid;  */
+    display: grid;
+    /* grid-template-columns:repeat(3,minmax( 100px,200px)); */
+    grid-template-columns: repeat(4, clamp(100px, 25%, 100px));
+    grid-template-rows: 100px;
+    /* grid-template:100px 100px 100px/ 100px 100px 100px 100px;  */
+    /* column-gap: 50px;
+      row-gap: 50px;
+      */
+    resize: both;
+    overflow: auto;
+    max-width: 1020px;
+    margin-inline: auto;
+    /* gap: 30px; */
+    grid-auto-rows: 100px;
+    background-color: rgb(198, 231, 12);
+    border: 1px solid black;
+
+
 }
-.divid{
-    background-color:white;
-    height: 140px;
-    width: 140px;
-    display: inline-block;
+
+.cell {
+    border: 1px solid black;
+    background-color: rgb(152, 31, 31);
+
 }
+
+/* .clicked { */
+/* background-color: black; */
+/* }  */
+
+/* .box{
+    height: 10px;
+    width: 10px;
+
+} */
