--- a/sketch.css
+++ b/sketch.css
@@ -3,33 +3,35 @@
     display: grid;
     /* grid-template-columns:repeat(3,minmax( 100px,200px)); */
      /* grid-template-columns: repeat(4, clamp(100px, 25%, 100px));  */
-     grid-template-columns: repeat(auto-fit,clamp(50px, 25%, 200px));
-     grid-template-rows: 100px; 
+    /* grid-template-columns: repeat(auto-fit,clamp(10px, 5%, 10px));  */
+    grid-template-columns: repeat(100, 1fr);
+    grid-template-rows: repeat(100,  1fr);  
     /* grid-template:100px 100px 100px/ 100px 100px 100px 100px;  */
     /* column-gap: 50px;
       row-gap: 50px;
       */
-    resize: both;
-    overflow: auto;
-    max-width: 1020px;
-    margin-inline: auto;
-     gap: 30px; 
-    grid-auto-rows: 100px;
-    background-color: rgb(198, 231, 12);
+    /* resize: both; 
+    overflow: auto;  */
+    width: 600px;
+    height: 600px;
+    /* margin-inline: auto;  */
+     /* gap: 30px;  */
+    /* grid-auto-rows: 10px; */
+    /* background-color: rgb(198, 231, 12); */
     border: 1px solid black;
 
 
 }
 
-.cell {
-    border: 1px solid black;
-    background-color: rgb(152, 31, 31);
+/* .cell { */
+    /* border: 1px solid rgb(144, 137, 137); */
+    /* background-color: rgb(152, 31, 31); */
 
-}
-
-/* .clicked { */
-/* background-color: black; */
-/* }  */
+/* } */
+/* 
+.clicked { 
+ background-color: black; 
+ }  */
 
 /* .box{
     height: 10px;
